# tuts

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
ai-in-action/: README.md
ai-in-action/1-invoice-ai-agents/: README.md  main.py  requirements.txt
ai-in-action/2-diagram-generation-agents/: 1-diagram-generation-agent.py  2-image-generation-agent.py  README.md  requirements.txt
building-agents-2025/: README.md
community-projects/language-tutor/: .gitignore  README.md  app.py  init_db.py  requirements.txt
community-projects/pydantic-ai-medical-agents/: .env.example  .gitignore  README.md  app.py  graph.py  models.py  pyproject.toml
community-projects/pydantic-ai-medical-agents/agents/: summary.py  vision.py
community-projects/pydantic-ai-medical-agents/agents/medical/: cardiology.py  dermatology.py  emergency.py  endocrinology.py  orthopedics.py  psychotherapy.py  pulmonology.py
community-projects/pydantic-ai-medical-agents/data/sample/: sample_reports.md
community-projects/pydantic-ai-rag/: Instructions.md  agent.py  app.py  parser.py  prompts.py  requirements.txt  vector_store.py
dify-101/: README.md
flowise-agents/: README.md
full-stack-ai-masterclass/: .env.example
full-stack-ai-masterclass/5-agent-api/: .env.example  .gitignore  README.md  agent.py  api.py  pyproject.toml
full-stack-ai-masterclass/6-agent-ui/: agent.py  app-gradio.py  app-streamlit-markdown.py  app-streamlit-stream.py  pyproject.toml
full-stack-ai-masterclass/7-db-agents/: agent-sql.py  agent.py  pyproject.toml
investment-report-pydanticai/: .env.sample  .gitignore  README.md  chatgpt_example.py  main.py  models.py  requirements.txt  tools.py
investment-report-pydanticai/development/: README.md  jinja_example.py  yfinance_example.py
jupyter-online/: README.md  circle.ipynb  fibonacci.ipynb
jupyter-vscode/: README.md  hello_world.ipynb
langchain-ollama/: README.md  langollama-simple.ipynb  langollama-tools.ipynb
langchain-rag/: .env.template  README.md  chatbot.ipynb  ingest.py  requirements.txt  supabase_setup.sql
langgraph-intro/: README.md  langgraph-step1.ipynb  langgraph-step3.ipynb
notebooklm/: README.md
ollama-local-setup/: README.md
pydantic-ai-masterclass/: .gitignore  2.2-agent-ollama.py  3.1-logfire-hello-world.py  3.2-logfire-span.py  4.1-structured-response-hello-world.py  4.2-structured-response-capital.py  README.md  requirements.txt
pydantic-ai-masterclass/12-model-settings/: 12.1-hello-world.py  12.2-model-settings-openai.py  12.3-model-settings-gemini.py  README.md  pyproject.toml
pydantic-ai-medical-agents/ai_medagents/: .env.example  .gitignore  README.md  app.py  graph.py  models.py  patient.py  pyproject.toml
pydantic-ai-medical-agents/ai_medagents/agents/: base.py  selector.py
pydantic-ai-medical-agents/ai_medagents/agents/medical/: gastroenterology.py  immunology.py  neurology.py
pydantic-ai-medical-agents/ai_medagents/ai_medagents/: app.py  example.py  graph.py  models.py  patient.py
pydantic-ai-medical-agents/ai_medagents/ai_medagents/agents/: base.py  summary.py
pydantic-ai-medical-agents/ai_medagents/ai_medagents/agents/medical/: cardiology.py  gastroenterology.py  neurology.py
pydanticai-graph-deepseek-r1/: .gitignore  README.md  product-decision-graph.py  requirements.txt
python-local-setup/: README.md  fibonacci.py
streamlit-chatbot-ui/: README.md  chat.py  chatbot_ui.py  html-to-pdf.py
v0.dev-nextjs/: README.md
(+186 files in other folders)
