[project]
name = "pydantic-ai-medical-agents"
version = "0.1.0"
description = "Multi-Agent Medical Analysis System using Pydantic AI"
authors = []
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic-ai (>=0.0.21,<0.0.22)",
    "python-dotenv (>=1.0.0)",
    "colorama (>=0.4.6)",
    "pydantic-graph (>=0.0.21,<0.0.22)",
    "gradio (>=5.17.1,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
app = "pydantic-ai-medical-agents.app:main"

[tool.poetry]
package-mode = false