[project]
name = "5-agent-api"
version = "0.1.0"
description = ""
authors = [
    {name = "AI Dev",email = "183338779+aidev9@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-ai (>=0.0.21,<0.0.25)",
    "colorama (>=0.4.6,<0.5.0)",
    "fastapi (>=0.115.8,<0.116.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
